ENH: Add test for qMRMLThreeDView
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14673 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Testing/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/Testing/CMakeLists.txt
@@ -18,6 +18,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   qMRMLSceneTransformModelTest1.cxx
   qMRMLSceneTransformModelTest2.cxx
   qMRMLTransformSlidersTest1.cxx
+  qMRMLThreeDViewTest1.cxx
   qMRMLTreeWidgetTest1.cxx
   qMRMLUtilsTest1.cxx
   qMRMLWidgetsExportTest1.cxx
@@ -63,6 +64,7 @@ SIMPLE_TEST( qMRMLSceneModelTest1 )
 SIMPLE_TEST( qMRMLSceneTransformModelTest1 )
 SCENE_TEST( qMRMLSceneTransformModelTest2 vol_and_cube.mrml)
 SIMPLE_TEST( qMRMLTransformSlidersTest1 )
+SIMPLE_TEST( qMRMLThreeDViewTest1)
 SCENE_TEST( qMRMLTreeWidgetTest1 vol_and_cube.mrml)
 SIMPLE_TEST( qMRMLUtilsTest1 )
 SIMPLE_TEST( qMRMLWidgetsExportTest1 )
