BUG: fix OpenIGTLinkIF CPack issue (the module was not loaded)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14676 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Utilities/Package/CMakeLists.txt
+++ b/Utilities/Package/CMakeLists.txt
@@ -198,7 +198,7 @@ if(EXISTS "${BatchMake_DIR}/CMakeCache.txt")
   set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${BatchMake_DIR};BatchMake;ALL;/")
 endif(EXISTS "${BatchMake_DIR}/CMakeCache.txt")
 if(EXISTS "${OpenIGTLink_DIR}/CMakeCache.txt")
-  set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${OpenIGTLink_DIR};OpenIGTLink;ALL;/")
+  set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${OpenIGTLink_DIR};igtl;ALL;/")
 endif(EXISTS "${OpenIGTLink_DIR}/CMakeCache.txt")
 
 if(APPLE)
