ENH: Add qMRMLLabelComboBox
Widget that listens a given vtkMRMLColorNode and update its associated 
comboBox with the colors of the Node. 

It also emits the signal "currentlabelChanged" when a label/color is selected.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14702 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -28,6 +28,8 @@ SET(qMRMLWidgets_SRCS
   qMRMLCollapsibleButton.h
   qMRMLColorTableComboBox.cxx
   qMRMLColorTableComboBox.h
+  qMRMLLabelComboBox.h
+  qMRMLLabelComboBox.cxx
   qMRMLEventLogger.cxx
   qMRMLEventLogger.h
   qMRMLEventLoggerWidget.cxx
@@ -96,6 +98,7 @@ SET(qMRMLWidgets_SRCS
 # Headers that should run through moc
 SET(qMRMLWidgets_MOC_SRCS
   qMRMLCollapsibleButton.h
+  qMRMLLabelComboBox.h 
   qMRMLColorTableComboBox.h
   qMRMLEventLogger.h
   qMRMLEventLoggerWidget.h
