--- a/Libs/qMRMLWidgets/Testing/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/Testing/CMakeLists.txt
@@ -8,6 +8,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   qMRMLListWidgetTest1.cxx
   qMRMLMatrixWidgetTest1.cxx
   qMRMLModelTest1.cxx
+  qMRMLLabelComboBoxTest1.cxx
   qMRMLNodeComboBoxTest1.cxx
   qMRMLNodeComboBoxTest2.cxx
   qMRMLNodeComboBoxTest3.cxx
@@ -55,6 +56,7 @@ SIMPLE_TEST( qMRMLLinearTransformSliderTest1 )
 SIMPLE_TEST( qMRMLListWidgetTest1 )
 SIMPLE_TEST( qMRMLMatrixWidgetTest1 )
 SIMPLE_TEST( qMRMLModelTest1 )
+SIMPLE_TEST( qMRMLLabelComboBoxTest1 )
 SIMPLE_TEST( qMRMLNodeComboBoxTest1 )
 SIMPLE_TEST( qMRMLNodeComboBoxTest2 )
 SCENE_TEST ( qMRMLNodeComboBoxTest3 diffusionEditor.mrml)
