ENH: EMSegment - Add SegmentationLogicStep to perform segmentation, and defined DefinePreprocesingStep internals.
- Also added access to the EMSegmentLogic from within qSlicerEMSegmentWorkflowWidgetSteps.
- Note that DefinePreprocessing step does not use TCL script

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14720 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/CMakeLists.txt
+++ b/QTModules/EMSegment/CMakeLists.txt
@@ -98,6 +98,8 @@ SET(workflow_SRCS
   Workflow/qSlicerEMSegmentEditNodeBasedParametersStep.h
   Workflow/qSlicerEMSegmentEditRegistrationParametersStep.cxx     # Step 5
   Workflow/qSlicerEMSegmentEditRegistrationParametersStep.h
+  Workflow/qSlicerEMSegmentSegmentationLogicStep.cxx              # Step 10
+  Workflow/qSlicerEMSegmentSegmentationLogicStep.h
   Workflow/qSlicerEMSegmentSpecifyIntensityDistributionStep.cxx   # Step 7
   Workflow/qSlicerEMSegmentSpecifyIntensityDistributionStep.h
   Workflow/qSlicerEMSegmentRunSegmentationStep.cxx                # Step 9
@@ -115,6 +117,7 @@ SET(workflow_MOC_SRCS
   Workflow/qSlicerEMSegmentDefineTaskStep.h                     # Step 1
   Workflow/qSlicerEMSegmentEditNodeBasedParametersStep.h        # Step 8
   Workflow/qSlicerEMSegmentEditRegistrationParametersStep.h     # Step 5
+  Workflow/qSlicerEMSegmentSegmentationLogicStep.h              # Step 10
   Workflow/qSlicerEMSegmentSpecifyIntensityDistributionStep.h   # Step 7
   Workflow/qSlicerEMSegmentRunSegmentationStep.h                # Step 9
 
