ENH: Improve install rules to install CTK and additonal Qt libraries if needed.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14739 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Utilities/Package/CMakeLists.txt
+++ b/Utilities/Package/CMakeLists.txt
@@ -143,7 +143,7 @@ endif(Slicer3_USE_PYTHON)
 
 if(Slicer3_USE_QT)
 
-  SET (QTLIBLIST QTCORE QTGUI QTNETWORK QTXML QTTEST QTSQL)
+  SET (QTLIBLIST QTCORE QTGUI QTNETWORK QTXML QTTEST QTSQL QTOPENGL QTWEBKIT PHONON QTXMLPATTERNS)
   FOREACH(qtlib ${QTLIBLIST})
     IF (NOT WIN32)
       IF (QT_${qtlib}_LIBRARY_RELEASE)
@@ -210,7 +210,9 @@ endif(EXISTS "${BatchMake_DIR}/CMakeCache.txt")
 if(EXISTS "${OpenIGTLink_DIR}/CMakeCache.txt")
   set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${OpenIGTLink_DIR};igtl;ALL;/")
 endif(EXISTS "${OpenIGTLink_DIR}/CMakeCache.txt")
-
+if(EXISTS "${CTK_DIR}/CTK-build/CMakeCache.txt")
+  set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${CTK_DIR}/CTK-build;CTK;ALL;/")
+endif(EXISTS "${CTK_DIR}/CTK-build/CMakeCache.txt")
 if(APPLE)
   set(CPACK_PACKAGE_ICON "${Slicer3_SOURCE_DIR}/Utilities/Package/Slicer3.icns")
 endif(APPLE)
