ENH: Change laucnher to launch SlicerQt if Slicer3 was not built on non-Windows platforms
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14797 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -339,7 +339,16 @@ proc launch_SetEnvironment {} {
           }
         }
       } else {
-        set ::Slicer3_REAL $::Slicer3_HOME/bin/Slicer3-real
+        #set ::Slicer3_REAL $::Slicer3_HOME/bin/Slicer3-real
+        set slicer3Real "$::Slicer3_HOME/bin/Slicer3-real"
+        set slicerQTReal "$::Slicer3_HOME/bin/SlicerQT-real"
+        if { [file exists "$slicer3Real"] } {
+            set ::Slicer3_REAL $slicer3Real
+            #set ::BUILD_SUBDIR $buildType
+        } elseif { [file exists "$slicerQTReal"] } {
+            set ::Slicer3_REAL $slicerQTReal
+            #set ::BUILD_SUBDIR $buildType
+        }
       }
       set ::env(SANDBOX_BIN_DIR)   ""
     
