ENH: Hide Color and Measurement modules that are WIP
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14798 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/CMakeLists.txt
+++ b/QTModules/CMakeLists.txt
@@ -19,7 +19,7 @@ INCLUDE(${Slicer3_CMAKE_DIR}/Slicer3QTModuleMacros.cmake)
 SET(qtmodules
   Annotation
   EMSegment
-  Measurements
+  #Measurements
   SlicerWelcome
   TractographyDisplay
   TractographyFiducialSeeding
