COMP: Provide the link directory for linking PythonQt when in use.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14819 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCore/CMakeLists.txt
+++ b/Base/QTCore/CMakeLists.txt
@@ -84,6 +84,7 @@ IF(Slicer3_USE_PYTHONQT)
   LIST(APPEND KIT_target_libraries
     CTKScriptingPythonCore
     vtkCommonPythonD # For vtkPythonUtils
+    PythonQt
     )
   IF(WIN32)
     # TODO: this resolves link errors on windows, but shouldn't be
