--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -273,6 +273,7 @@ if (Slicer3_USE_QT)
     SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CTK_CMAKE_UTILITIES_DIR})
     IF(Slicer3_USE_PYTHONQT)
       SET(PYTHONQT_INSTALL_DIR ${CTK_PYTHONQT_INSTALL_DIR})
+      LINK_DIRECTORIES(${PYTHONQT_INSTALL_DIR}/lib)
       INCLUDE(${CTK_CMAKE_DIR}/ctkMacroWrapPythonQt.cmake)
     ENDIF()
   ENDIF()
