ENH: don't undefine Slicer3_INSTALL_MODULES_INCLUDE_DIR so that module header files aren't installed in the root of your system drive.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14822 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,10 +217,10 @@ option(Slicer3_USE_KWWIDGETS "Build Slicer3 with KWWidgets." ON)
 # Since modules are KWWidgets based, unset there variables
 IF (NOT Slicer3_USE_KWWIDGETS)
   # Since the module Logic is shared between QTModules and regular Modules,
-  # the associated BIN and LIB directory shouldn't be unset
+  # the associated BIN, LIB and INCLUDE directory shouldn't be unset
   #UNSET(Slicer3_INSTALL_MODULES_BIN_DIR)
   #UNSET(Slicer3_INSTALL_MODULES_LIB_DIR)
-  UNSET(Slicer3_INSTALL_MODULES_INCLUDE_DIR)
+  #UNSET(Slicer3_INSTALL_MODULES_INCLUDE_DIR)
   UNSET(Slicer3_INSTALL_MODULES_SHARE_DIR)
 ENDIF (NOT Slicer3_USE_KWWIDGETS)
 
