COMP: fix the path to incrtcl in the case where kwwidgets isn't being used
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14828 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -420,6 +420,14 @@ IF (VTK_WRAP_TCL)
     set(INCR_TCL_VERSION_DOT "${INCR_TCL_MAJOR_VERSION}.${INCR_TCL_MINOR_VERSION}")
     set(INCR_TCL_VERSION "${INCR_TCL_MAJOR_VERSION}${INCR_TCL_MINOR_VERSION}")
   ENDIF(Slicer3_USE_KWWIDGETS)
+ELSE(VTK_WRAP_TCL)
+  # TODO: these should be passed in by SuperBuild
+  # For now, use 3.2 as a fallback - we haven't changed versions in years and probably 
+  # never will, so this is always likely to work.
+  # This is needed so the launcher can set the paths to the correct subdirectories
+  # for incrTcl and incrTk
+  set(INCR_TCL_VERSION_DOT "3.2")
+  set(INCR_TCL_VERSION "32")
 ENDIF (VTK_WRAP_TCL)
 
 #-----------------------------------------------------------------------------
