ENH: Temp. disabled some tests.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14830 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/Testing/Cxx/CMakeLists.txt
+++ b/QTModules/Annotation/Testing/Cxx/CMakeLists.txt
@@ -27,9 +27,9 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   vtkMRMLAnnotationRulerStorageNodeTest1.cxx
   vtkMRMLAnnotationFiducialNodeTest1.cxx
   vtkMRMLAnnotationFiducialsStorageNodeTest1.cxx
-  vtkMRMLAnnotationTextNodeAndWidgetTest1.cxx
-  vtkMRMLAnnotationTextDisplayableManagerTest1.cxx
-  vtkMRMLAnnotationTextNodeAndWidgetTest1.cxx
+  #vtkMRMLAnnotationTextNodeAndWidgetTest1.cxx
+  #vtkMRMLAnnotationTextDisplayableManagerTest1.cxx
+  #vtkMRMLAnnotationTextNodeAndWidgetTest1.cxx
   #vtkSlicerAnnotationModuleLogicTest1.cxx
   #qSlicerAnnotationModuleAnnotationPropertyDialogTest1.cxx
   #TestAnnAngleWidget3D.cxx
