COMP: Supress Weave license warning.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14847 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CTestCustom.cmake.in
+++ b/SuperBuild/CTestCustom.cmake.in
@@ -202,7 +202,9 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   
   # Since NUMPY has test that return build errors, let's add the following exception
   "WARNING non-zero return value in ctest from"
-   
+  
+  #Weave 
+  "UserWarning: 'licence' distribution option is deprecated; use 'license'"
   )
   
 SET(CTEST_CUSTOM_ERROR_EXCEPTION
