BUG: install qt dlls in bin on Windows.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14848 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Utilities/Package/CMakeLists.txt
+++ b/Utilities/Package/CMakeLists.txt
@@ -155,7 +155,7 @@ if(Slicer3_USE_QT)
       ENDIF (QT_${qtlib}_LIBRARY_RELEASE)
     ELSE (NOT WIN32)
       GET_FILENAME_COMPONENT(QT_DLL_PATH_tmp ${QT_QMAKE_EXECUTABLE} PATH)
-      INSTALL(FILES ${QT_DLL_PATH_tmp}/${qtlib}4.dll DESTINATION lib/Qt COMPONENT Runtime)
+      INSTALL(FILES ${QT_DLL_PATH_tmp}/${qtlib}4.dll DESTINATION bin COMPONENT Runtime)
     ENDIF (NOT WIN32)
     
   ENDFOREACH(qtlib)
