COMP: Remove typo in CMakeLists file
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14856 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Utilities/Package/CMakeLists.txt
+++ b/Utilities/Package/CMakeLists.txt
@@ -136,7 +136,7 @@ if(Slicer3_USE_PYTHON OR Slicer3_USE_PYTHONQT)
       DESTINATION bin
       COMPONENT Runtime)
   endif()
-endif(Slicer3_USE_PYTHON)
+endif(Slicer3_USE_PYTHON OR Slicer3_USE_PYTHONQT)
 
 # -------------------------------------------------------------------------
 # Find and install QT
