ENH: make the launcher splash screen text generic for slicer 3 or 4
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14873 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -911,7 +911,7 @@ proc launch_SplashShow { {delayms 7000} } {
     set ycorner [expr [winfo screenheight .splash]/2-($height/2)]
     wm geometry .splash +$xcorner+$ycorner
 
-    label .splash.t1 -text "Slicer3 starting up..." -bg white -font $splashfontb
+    label .splash.t1 -text "3D Slicer starting up..." -bg white -font $splashfontb
     label .splash.t2 -text "" -bg white -fg red -font $splashfont
     label .splash.v -text "" -bg white -fg darkblue -font $splashfont
 
