BUG: If building Slicer3_USE_PYTHONQT_WITH_TCL then python needs to depend on tcl/tk being built.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14880 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -334,7 +334,7 @@ set(incrTcl_DEPENDENCIES tcl tk)
 set(iwidgets_DEPENDENCIES tcl itcl)
 set(blt_DEPENDENCIES tcl tk)
 set(python_DEPENDENCIES)
-if(Slicer3_USE_KWWIDGETS)
+if(Slicer3_USE_KWWIDGETS OR Slicer3_USE_PYTHONQT_WITH_TCL)
   if(WIN32)
     set(python_DEPENDENCIES tcl)
   else()
