COMP: fix the pythonpath on a superbuild build tree
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14884 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -409,12 +409,7 @@ proc launch_SetEnvironment {} {
 
       if { "@PYTHON_LIBRARY@" != "" } {
         # this is the variable used in superbuild
-          if {$::env(BUILD) == $::WINDOWS} {
-              # TODO: figure out python dir for superbuild windows
-            set ::env(PYTHON_DIR)         [file normalize [file dirname "@PYTHON_LIBRARY@"]/PCbuild]
-          } else {
-            set ::env(PYTHON_DIR)         [file normalize [file dirname [file dirname "@PYTHON_LIBRARY@"]]]
-          }
+        set ::env(PYTHON_DIR)         [file normalize [file dirname "@PYTHON_LIBRARY@"]]
       } else { 
           if {$::env(BUILD) == $::WINDOWS} {
             set ::env(PYTHON_DIR)         [file normalize [file dirname "@PYTHON_INCLUDE_PATH@"]/PCbuild]
