ENH: Add MRML, MRMLLogic, FreeSurfer, RemoteIO and vtkTeem Python libs into PYTHONPATH for the install build
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14902 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -818,6 +818,11 @@ proc launch_SetPaths {} {
       set ::env(PYTHONPATH) "$::env(Slicer3_HOME)/lib/Slicer3/SlicerBaseGUI/Python$SEP$::env(PYTHONPATH)"
       set ::env(PYTHONPATH) "$::env(Slicer3_HOME)/lib/site-packages$SEP$::env(PYTHONPATH)"
       set ::env(PYTHONPATH) "$::env(VTK_BIN_DIR)$SEP$::env(PYTHONPATH)"
+	  set ::env(PYTHONPATH) "$::env(Slicer3_HOME)/lib/FreeSurfer$SEP$::env(PYTHONPATH)"
+      set ::env(PYTHONPATH) "$::env(Slicer3_HOME)/lib/MRML$SEP$::env(PYTHONPATH)"
+      set ::env(PYTHONPATH) "$::env(Slicer3_HOME)/lib/MRMLLogic$SEP$::env(PYTHONPATH)"
+      set ::env(PYTHONPATH) "$::env(Slicer3_HOME)/lib/RemoteIO$SEP$::env(PYTHONPATH)"
+      set ::env(PYTHONPATH) "$::env(Slicer3_HOME)/lib/vtkTeem$SEP$::env(PYTHONPATH)"
     }
 }
 
