BUG: don't check if vtk.exe exists to determine if it's a release
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14903 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -181,7 +181,7 @@ proc launch_SetEnvironment {} {
     if { [string match -nocase "windows*" $::tcl_platform(os)] } {
       set ext ".exe"
     }
-    
+    # if you change something here, please change it in qSlicerCoreApplication too
     if { [file exists $::env(Slicer3_HOME)/bin/vtkEncodeString$ext] } {
       set installed 1
     }
