ENH: adding a displayable data hierarchy node, between mrml hierarchy node and model hierarchy node. Added tests.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14907 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRML/CMakeLists.txt
+++ b/Libs/MRML/CMakeLists.txt
@@ -106,6 +106,7 @@ set(MRML_SRCS
   vtkMRMLFreeSurferModelStorageNode.cxx    
   vtkMRMLFreeSurferProceduralColorNode.cxx
   vtkMRMLHierarchyNode.cxx
+  vtkMRMLDisplayableHierarchyNode.cxx
   vtkMRMLInteractionNode.cxx
   vtkMRMLLabelMapVolumeDisplayNode.cxx
   vtkMRMLLinearTransformNode.cxx
